# python-starter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/python_starter/: __init__.py  __main__.py
